# pokebase

./: .gitignore  LICENSE  README.md
backend/: .pdm-python  all_parsed_data.json  all_pokemon_descriptions.json  pyproject.toml
backend/app/: __init__.py  main.py  prometheus.yml
backend/app/api/: __init__.py  endpoints.py  router.py
backend/app/config/: __init__.py  env.py  llm.py  logging.py  metrics.py
backend/app/service/: __init__.py  pokemon.py
backend/app/utils/: __init__.py  gemini_llm.py  generate_descriptions.py  parse_pokemon_data.py  prompts.py
backend/tests/: README.md  conftest.py  test_api_endpoints.py  test_pokemon_service.py
frontend/: package-lock.json  package.json
frontend/src/: mui-provider.tsx  mui-theme.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/utils/: api.ts
