[project]
name = "pokebase"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Yashvardhan Goel", email = "yash2002goel@gmail.com"},
]
dependencies = ["requests>=2.32.3", "pydantic-settings>=2.9.1", "fastapi>=0.115.12"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
