[project]
name = "pokebase"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Yashvardhan Goel", email = "yash2002goel@gmail.com"},
]
dependencies = [
    "aiohttp>=3.9.3",
    "pydantic-settings>=2.9.1",
    "fastapi[standard]>=0.115.12",
    "google-genai>=1.18.0",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.scripts]
dev = "uvicorn app.main:app --reload --app-dir ."
