[project]
name = "pokebase"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Yashvardhan Goel", email = "yash2002goel@gmail.com"},
]
dependencies = [
    "aiohttp>=3.9.3",
    "pydantic-settings>=2.9.1",
    "fastapi[standard]>=0.115.12",
    "google-genai>=1.18.0",
    "prometheus-client>=0.22.0",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "pytest-mock>=3.12.0",
    "aioresponses>=0.7.8",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.scripts]
dev = "uvicorn app.main:app --reload --app-dir ."
test = "pytest tests/ -v"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "-v --tb=short --strict-markers"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow tests",
]

[dependency-groups]
dev = [
    "aioresponses>=0.7.8",
]
